--- a/front-end/src/components/bets/Bets.module.css
+++ b/front-end/src/components/bets/Bets.module.css
@@ -1,10 +1,12 @@
 .table {
-  display: table;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .tablerow {
   display: table-row;
+  gap : 4rem;
 }
+
 
 
